src/test/deca/context/invalid/classes/class_name_conflict_builtin.deca
// Description :
// nom de classe en conflit avec un mot clé ou type de base
//
// Resultats :
// Erreur contextuelle
// Ligne 5 : nom de classe interdit

class int { // doit échouer
}
